--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,6 +14,7 @@
     "@repo/ui": "*",
     "@repo/database": "*",
     "@repo/common": "*",
+    "@repo/types": "*",
     "next": "^16.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.0"
