--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,15 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/common": "*",
     "@repo/database": "*",
-    "@repo/ui": "*",
     "@repo/types": "*",
+    "@repo/ui": "*",
     "better-auth": "^1.3.34",
     "lucide-react": "^0.552.0",
     "next": "^16.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "twilio": "^5.10.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.4.6",
