schedule twilio messages

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 TWILIO_ACCOUNT_SID="your-twilio-account-sid"
 TWILIO_AUTH_TOKEN="your-twilio-auth-token"
 TWILIO_PHONE_NUMBER="+1234567890"
+
+CRON_SECRET=your-secret-key-here
+
