--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 TWILIO_ACCOUNT_SID="your-twilio-account-sid"
 TWILIO_AUTH_TOKEN="your-twilio-auth-token"
 TWILIO_PHONE_NUMBER="+1234567890"
+TWILIO_WHATSAPP_NUMBER="+1234567890"
+
+# Email Polling Configuration (IMAP)
+EMAIL_IMAP_HOST="imap.gmail.com"
+EMAIL_IMAP_PORT=993
+EMAIL_IMAP_USER="your-email@gmail.com"
+EMAIL_IMAP_PASSWORD="your-app-password"
+EMAIL_IMAP_TLS=true
 
 CRON_SECRET=your-secret-key-here
-
