--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "next": "^16.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.3.0",
     "twilio": "^5.10.4"
   },
   "devDependencies": {
